ejercicio con js

--- a/ejercicioJS4.html
+++ b/ejercicioJS4.html
@@ -4,6 +4,8 @@
 	<title>Login con password incorrecta</title>
 </head>
 <body>
+	<p>Toca F12</p>
+	<p>Selecciona la opcion "Console"</p>
 	<script>
 		let password = "Contraseña";
 		let input = "noContraseña";
